# OpenAlterEgo-v0.2

./: CONTRIBUTING.md  LICENSE-HARDWARE  LICENSE-SOFTWARE  README.md
software/python/: .gitignore  README.md  pyproject.toml  requirements.txt
software/python/accel/: Cargo.toml  README.md  pyproject.toml
software/python/accel/src/: lib.rs
software/python/datasets/: catalog.json
software/python/openalterego/: cli.py
software/python/openalterego/acquisition/: __init__.py  ble_client.py  packet.py  simulate.py  virtual.py
software/python/openalterego/api/: protocol.py  server.py
software/python/openalterego/clients/: __init__.py  glasses_stub.py
software/python/openalterego/core/: __init__.py  ringbuffer.py  types.py
software/python/openalterego/dsp/: __init__.py  emg_config.py  filters.py  online.py  preprocess_cache.py  quality.py
software/python/openalterego/hardware/: __init__.py  bind.py  load.py  montages.py  presets.py  resolve.py  runner.py  schema.py  validate.py
software/python/openalterego/ml/: analysis.py  data_split.py  device.py  infer.py  model.py  segment_cache.py  train.py  train_benchmark.py  training_perf.py
software/python/openalterego/ml/ctc/: __init__.py  augment.py  dataset.py  decode.py  decode_utterance.py  eval.py  infer.py  lexicon_viterbi.py  metrics.py  model.py  train.py  trial_decode.py  trial_lm.py  util.py
software/python/openalterego/ml/datasets/: __init__.py  events.py  gaddy.py  gowda.py  session.py
software/python/openalterego/ml/eval/: __init__.py  bootstrap.py  gowda_ablation.py  gowda_phase2.py  gowda_phase3.py  gowda_phase4.py  gowda_phase5.py  gowda_phase6.py  gowda_train.py  m1_transfer_grid.py  metrics.py  phone_separability.py  session_ab.py  sim_realism_ablation.py  (+1 more)
software/python/openalterego/runtime/: __init__.py  ctc_streaming.py  latency_benchmark.py  streaming.py  utterance_segmenter.py  window_sweep.py
software/python/openalterego/sim/: __init__.py  dataset.py  hardware.py  literature.py  montage_geometry.py  realism.py  snr_calibration.py  stream.py  transport.py
software/python/openalterego/users/: __init__.py  adapter_train.py  calibration.py  collect.py  data_collection.py  defaults.py  labeling.py  manager.py  onboarding.py  profile.py  recalibration.py
software/python/scripts/: test_client.py
software/python/tests/: test_analysis_split.py  test_basis_store.py  test_biophysical.py  test_biophysical_perf.py  test_calibration.py  test_cli_user.py  test_coarticulation.py  test_collect.py  test_ctc_beam.py  test_ctc_infer.py  test_ctc_streaming.py  test_data_split.py  test_emg_config.py  test_filters.py  test_gowda_ctc.py  test_gowda_scenario.py  test_hardware_dsl.py  test_hw_pipeline.py  test_infer_abstain.py  test_integration.py  test_lexicon_viterbi.py  test_literature_emg.py  test_model_datasets.py  test_neurobiophysical.py  test_packet.py  test_phone_align.py  test_phone_templates_m1.py  test_phonology.py  test_pipeline_sim.py  test_preprocess_cache.py  test_quality.py  test_recal_window_label.py  test_ringbuffer.py  test_robustness_latency.py  test_segment_cache.py  test_server_ws.py  test_session_ab.py  test_sim.py  test_sim_accel_snr.py  test_sim_realism_ablation.py  (+9 more)
(+135 files in other folders)
