[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalterego"
version = "0.2.0"
description = "Open-source, AlterEgo-style silent-speech interface: simulation + DSP + ML + realtime websocket output."
readme = "../../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAlterEgo contributors"}]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "tqdm>=4.66",
  "pydantic>=2.0",
  "websockets>=10.0",
  "bleak>=0.21",
  "matplotlib>=3.7",
  "pandas>=2.0",
]

[project.scripts]
openalterego = "openalterego.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
