[package]
name = "openalterego_accel"
version = "0.1.0"
edition = "2021"
description = "Rust-accelerated spike scatter for OpenAlterEgo biophysical EMG synthesis"

[lib]
name = "openalterego_accel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
lto = true
codegen-units = 1
