[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "openalterego-accel"
version = "0.1.0"
description = "Rust-accelerated spike scatter for OpenAlterEgo biophysical EMG synthesis"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.maturin]
module-name = "openalterego_accel"
manifest-path = "Cargo.toml"
